--- a/angular.json
+++ b/angular.json
@@ -31,12 +31,12 @@
               "src/assets"
             ],
             "styles": [
-                "node_modules/bootstrap/scss/bootstrap.scss",
-                "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-                "src/styles.scss"
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "src/styles.scss"
             ],
             "scripts": [
-                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
@@ -111,5 +111,10 @@
       }
     }
   },
-  "defaultProject": "jacob-stec-web"
+  "defaultProject": "jacob-stec-web",
+  "cli": {
+    "schematicCollections": [
+      "@ngrx/schematics"
+    ]
+  }
 }
