--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ngrx/store": "^14.3.1",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
     "rxjs": "~6.6.0",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "~12.2.5",
     "@angular/cli": "~12.2.5",
     "@angular/compiler-cli": "~12.2.0",
+    "@ngrx/schematics": "^14.3.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
